[package]
name = "ecs_anime_async"
version = "0.1.0"
authors = ["Orito Itsuki <20170107+MatchaChoco010@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
futures = "0.3.12"
futures-timer = "3.0.2"
ggez = "0.5.1"
legion = "0.3.1"
once_cell = "1.5.2"
rayon = "1.5.0"
serde = "1.0.120"
serde_json = "1.0.61"

[dependencies.nalgebra]
version = "0.24.0"
features = ["serde-serialize"]
